--- a/app/assets/css/style.css
+++ b/app/assets/css/style.css
@@ -497,8 +497,8 @@
 }
 
 .post__activity {
-    width: 45%;
-    padding: 8px 8px;
+    width: 100%;
+    padding: 8px 40px;
     cursor: pointer;
     text-align: center;
     display: flex;
@@ -702,6 +702,7 @@
 
 .user__info__avatar {
     width: 120px;
+    height: 120px;
     object-fit: contain;
 }
 
@@ -1162,4 +1163,25 @@ input[type=number]::-webkit-inner-spin-button {
     outline: none;
     padding: 12px;
     font-size: 18px;
+}
+
+.profile__history-box {
+    padding: 40px;
+}
+
+.profile__history-box--row {
+    height: 40px;
+    font-size: 14px;
+    padding: 12px 20px;
+}
+
+.profile__history-box--title {
+    background: #4885a2;
+    color: var(--white-color);
+}
+
+.profile__history-box--row th {
+    text-align: left;
+    padding: 12px;
+    font-weight: 500;
 }
